fix the id collisions... at least the ones bothering me.  Get the counter-dev working, but break the normal derivatives, refs #22

--- a/ui/web/htdocs/css/datepicker.css
+++ b/ui/web/htdocs/css/datepicker.css
@@ -190,7 +190,7 @@ td.datepickerSpecial.datepickerSelected a {
 	background: #a00;
 }
 
-#widgetCalendar {
+.widgetCalendar {
 	height: 0;
         position: relative;
         left: 0;
@@ -198,23 +198,23 @@ td.datepickerSpecial.datepickerSelected a {
         width: 588px;
         background: #B9B9B9;
 }
-#widgetCalendar .datepicker {
+.widgetCalendar .datepicker {
         position: absolute;
         bottom: 0;
         top: auto;
 }
-#widgetCalendar .datepickerContainer,
-#widgetCalendar .datepickerBorderT,
-#widgetCalendar .datepickerBorderB,
-#widgetCalendar .datepickerBorderL,
-#widgetCalendar .datepickerBorderR,
-#widgetCalendar .datepickerBorderTL,
-#widgetCalendar .datepickerBorderTR,
-#widgetCalendar .datepickerBorderBL,
-#widgetCalendar .datepickerBorderBR {
+.widgetCalendar .datepickerContainer,
+.widgetCalendar .datepickerBorderT,
+.widgetCalendar .datepickerBorderB,
+.widgetCalendar .datepickerBorderL,
+.widgetCalendar .datepickerBorderR,
+.widgetCalendar .datepickerBorderTL,
+.widgetCalendar .datepickerBorderTR,
+.widgetCalendar .datepickerBorderBL,
+.widgetCalendar .datepickerBorderBR {
         background: transparent !important;
 }
-#widgetCalendar .datepicker a:hover{
+.widgetCalendar .datepicker a:hover{
         color: #b6f063;
 }
 
